--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "vef1-2024-v9",
   "version": "1.0.0",
   "scripts": {
-    "dev": "browser-sync start --server --files ./src/ styles.css index.html",
+    "browser-sync": "browser-sync start --server --files ./src/ styles.css index.html",
+    "sass": "sass styles.scss styles.css",
+    "sass-watch": "sass *.scss styles.css --watch",
+    "dev": "concurrently npm:sass-watch npm:browser-sync",
     "copy:html": "cpy ./*.html ./build/",
     "copy:css": "cpy ./*.css ./build/",
     "copy:js": "cpy ./src ./build/",
@@ -15,11 +18,13 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "bootstrap": "^5.3.3",
     "browser-sync": "^3.0.3",
     "concurrently": "^9.0.1",
     "cpy-cli": "^5.0.0",
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "sass": "^1.80.6"
   }
 }
