--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "copy:css": "cpy ./*.css ./build/",
     "copy:js": "cpy ./src ./build/",
     "build": "concurrently npm:copy:*",
-    "lint": "eslint ./src",
+    "eslint": "eslint ./src",
+    "stylelint": "stylelint styles.scss",
+    "lint": "concurrently npm:eslint npm:stylelint",
     "prettier": "prettier --write ."
   },
   "keywords": [],
@@ -25,6 +27,9 @@
     "eslint": "^9.12.0",
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
-    "sass": "^1.80.6"
+    "sass": "^1.80.6",
+    "stylelint": "^16.10.0",
+    "stylelint-config-sass-guidelines": "^12.1.0",
+    "stylelint-config-standard": "^36.0.1"
   }
 }
